Always show scrollbar to avoid layout glitch when switching tabs

--- a/css/styles.less
+++ b/css/styles.less
@@ -51,6 +51,7 @@ html, body, .section {
 
 html {
 	position: relative;
+	overflow-y: scroll;
 }
 
 body {
